# generic-example

./: README.md  hasql-generics.cabal
src/: Main.hs  Models.hs  Types.hs
