cabal-version:      3.6

name:               generics-example
version:            0.1.0.0
author:             Test
maintainer:         test@example.com

executable hasql-generics
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Types
                  , Models
  build-depends:    base
                  , bytestring
                  , containers
                  , contravariant-extras
                  , hasql
                  , hasql-transaction
                  , mtl
                  , quiet
                  , text
                  , transformers

  hs-source-dirs:   src
  ghc-options:      -Wall
